# plover_retro_stringop

./: .gitignore  README.md  setup.cfg  setup.py
plover_retro_stringop/: __init__.py
