[metadata]
name = plover_retro_stringop
version = 0.1.1
description = Call arbirary Python code on the last n words!
author = Niclas Meyer
author_email = niclas@countingsort.com
license = MIT
url = https://github.com/buffet/plover_retro_stringop
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages = find:

[options.entry_points]
plover.meta =
    retro_stringop = plover_retro_stringop:retro_stringop
    retro_stringop_sh = plover_retro_stringop:retro_stringop_sh
